updated at: 2023-04-25 16:51, 電磁ノコギリ「RTG-01 Lumberjack」【VRC想定】 - Rockout inds./ロックアウト インダストリーズ - BOOTH

--- a/VRChat/32/1214032.html
+++ b/VRChat/32/1214032.html
@@ -76,9 +76,9 @@
     "viewport">
     <meta name="csrf-param" content="authenticity_token">
     <script src=
-    "https://asset.booth.pm/assets/fb659a8225f82fcde9b8.js" defer=
+    "https://asset.booth.pm/assets/39c7779328e45f19f660.js" defer=
     "defer" nonce=
-    "kZIGZifBaxAABzPcRRp9PyqeDTiayJqKIYgicYIsvow="></script>
+    "dRuD9+Sdr70ktELG8k5j6rJ6GXU0isnXrCKLnp0Bi1I="></script>
     <script type="application/ld+json">
     {"@context":"https://schema.org","@type":"Product","name":"電磁ノコギリ「RTG-01 Lumberjack」【VRC想定】","description":"VRC想定電磁ノコギリ　型番「RTG-01」を販売いたします！\n\n改変用Textureパック、サブスタファイル入、刃はオレンジのエミッションです。\n読み方はランバージャック（木こり）です。","url":"https://booth.pm/ja/items/1214032","offers":{"priceCurrency":"JPY","@type":"AggregateOffer","lowPrice":"500","highPrice":"1000"},"image":"https://booth.pximg.net/c/620x620/1b1a42d9-d78b-40e1-821f-cf3ab20d0f73/i/1214032/b4ff809b-623a-487a-a641-b9f19a3d73a0_base_resized.jpg"}
     </script>
@@ -92,7 +92,7 @@
     "//www.googletagmanager.com/ns.html?id=GTM-WLLNDM" style=
     "display:none;visibility:hidden" width="0"></iframe></noscript>
     <script src="https://asset.booth.pm/google_tag_manager_ad.js"
-    nonce="kZIGZifBaxAABzPcRRp9PyqeDTiayJqKIYgicYIsvow="></script>
+    nonce="dRuD9+Sdr70ktELG8k5j6rJ6GXU0isnXrCKLnp0Bi1I="></script>
     <div class="service-informations">
       <div class="promotion-banner"></div>
     </div>
@@ -116,6 +116,8 @@
               <div class=
               "market-item-detail-article u-d-flex u-flex-column u-pb-400 u-align-items-center">
                 <div class="container">
+                  <div class=
+                  "market-item-detail__exhibition-banner"></div>
                   <div id="js-item-order"></div>
                   <div class="u-pt-600 u-d-flex">
                     <div class=
@@ -160,7 +162,7 @@
                           rel="nofollow" data-method="post" href=
                           "https://booth.pm/items/1214032/wish_list">
                           <div class=
-                          "border-2 border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
+                          "border border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
                             <div class=
                             "typography-14 preserve-half-leading wishlists_count">
                               113
@@ -175,14 +177,13 @@
                           data-method="delete" href=
                           "https://booth.pm/items/1214032/wish_list">
                           <div class=
-                          "border-2 border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
+                          "border border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
                             <div class=
                             "typography-14 preserve-half-leading wishlists_count">
                               113
                             </div>
                           </div></a>
                         </div>
-                        <div class="empty:hidden my-16"></div>
                         <div>
                           <ul class=
                           "variations u-mt-300 u-border-b" id=
