--- a/VRChat/39/1213039.html
+++ b/VRChat/39/1213039.html
@@ -75,9 +75,9 @@
     "viewport">
     <meta name="csrf-param" content="authenticity_token">
     <script src=
-    "https://asset.booth.pm/assets/fb659a8225f82fcde9b8.js" defer=
+    "https://asset.booth.pm/assets/39c7779328e45f19f660.js" defer=
     "defer" nonce=
-    "wO+XCuKHtRq5OHFcXu8NnGxnaXV5AZLxKaOTcMENgYQ="></script>
+    "cL9TEWkOH/tRDjCNN863AiZbFAhD5AJrMRTfmcNpink="></script>
     <script type="application/ld+json">
     {"@context":"https://schema.org","@type":"Product","name":"VRChat向け　段ボール（無地）","description":"VRchat向けアクセサリ：段ボール（無地）\n\nポリゴン数264のモデルデータです\n\nunityパッケージに収めてあり、マテリアル数は1個です、またボーンによって変形、分解が可能です\n\nFBXファイル、テクスチャ、ノーマルマップも同梱されています。\n\n※画像の段ボールに入っているパンケーキは別売りです、同梱されていません","url":"https://booth.pm/ja/items/1213039","offers":{"priceCurrency":"JPY","@type":"Offer","price":"200"},"image":"https://booth.pximg.net/c/620x620/eaae416f-80ca-4582-baa6-17cd5c7d41ab/i/1213039/7d46d69f-4002-474a-b348-41eb1cd68ceb_base_resized.jpg"}
     </script>
@@ -91,7 +91,7 @@
     "//www.googletagmanager.com/ns.html?id=GTM-WLLNDM" style=
     "display:none;visibility:hidden" width="0"></iframe></noscript>
     <script src="https://asset.booth.pm/google_tag_manager_ad.js"
-    nonce="wO+XCuKHtRq5OHFcXu8NnGxnaXV5AZLxKaOTcMENgYQ="></script>
+    nonce="cL9TEWkOH/tRDjCNN863AiZbFAhD5AJrMRTfmcNpink="></script>
     <div class="service-informations">
       <div class="promotion-banner"></div>
     </div>
@@ -115,6 +115,8 @@
               <div class=
               "market-item-detail-article u-d-flex u-flex-column u-pb-400 u-align-items-center">
                 <div class="container">
+                  <div class=
+                  "market-item-detail__exhibition-banner"></div>
                   <div id="js-item-order"></div>
                   <div class="u-pt-600 u-d-flex">
                     <div class=
@@ -158,7 +160,7 @@
                           rel="nofollow" data-method="post" href=
                           "https://booth.pm/items/1213039/wish_list">
                           <div class=
-                          "border-2 border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
+                          "border border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
                             <div class=
                             "typography-14 preserve-half-leading wishlists_count">
                               42
@@ -173,14 +175,13 @@
                           data-method="delete" href=
                           "https://booth.pm/items/1213039/wish_list">
                           <div class=
-                          "border-2 border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
+                          "border border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
                             <div class=
                             "typography-14 preserve-half-leading wishlists_count">
                               42
                             </div>
                           </div></a>
                         </div>
-                        <div class="empty:hidden my-16"></div>
                         <div>
                           <ul class=
                           "variations u-mt-300 u-border-b" id=
