updated at: 2023-04-25 16:52, ３Ｄモデル【黒き弓矢】 - ガルムショップ - BOOTH

--- a/VRChat/44/1212644.html
+++ b/VRChat/44/1212644.html
@@ -75,9 +75,9 @@
     "viewport">
     <meta name="csrf-param" content="authenticity_token">
     <script src=
-    "https://asset.booth.pm/assets/fb659a8225f82fcde9b8.js" defer=
+    "https://asset.booth.pm/assets/39c7779328e45f19f660.js" defer=
     "defer" nonce=
-    "pHmxv61BxafQL8B3vS37qNP1PrzOqeeBW7rEbz2+uqU="></script>
+    "BVWkswijPFREt/WQFMpvqvQ0vtz9g3XHkbKWDsjeUhI="></script>
     <script type="application/ld+json">
     {"@context":"https://schema.org","@type":"Product","name":"３Ｄモデル【黒き弓矢】","description":"【黒き弓】の説明です\n\n無料版と投げ専用は同じ内容です\n\n・概要\nこのモデルはVRChat向けに作ったものですが、ほかの用途にもご使用できます。\nまた、モデルやテクスチャの改変など自由にご使用できます\n弓と矢のセットになっています\n\n・内容物\n  FBXデータ:2つ\n　テクスチャ:3枚\n  package:2つ\n  readme\n\n・弓\n頂点数：958 \nテクスチャ:2枚\n\n・矢\n頂点数:206\nテクスチャ:1枚\n\n\n・禁止事項\n本製品の再配布\n自作発言\n周囲への迷惑行為\n\n","url":"https://booth.pm/ja/items/1212644","offers":{"priceCurrency":"JPY","@type":"AggregateOffer","lowPrice":"0","highPrice":"100"},"image":"https://booth.pximg.net/c/620x620/692fa6dd-eca8-4ebe-b6b2-07a66fa61a2f/i/1212644/b6b40572-fff4-46ef-a49f-29d74fbdae45_base_resized.jpg"}
     </script>
@@ -91,7 +91,7 @@
     "//www.googletagmanager.com/ns.html?id=GTM-WLLNDM" style=
     "display:none;visibility:hidden" width="0"></iframe></noscript>
     <script src="https://asset.booth.pm/google_tag_manager_ad.js"
-    nonce="pHmxv61BxafQL8B3vS37qNP1PrzOqeeBW7rEbz2+uqU="></script>
+    nonce="BVWkswijPFREt/WQFMpvqvQ0vtz9g3XHkbKWDsjeUhI="></script>
     <div class="service-informations">
       <div class="promotion-banner"></div>
     </div>
@@ -115,6 +115,8 @@
               <div class=
               "market-item-detail-article u-d-flex u-flex-column u-pb-400 u-align-items-center">
                 <div class="container">
+                  <div class=
+                  "market-item-detail__exhibition-banner"></div>
                   <div id="js-item-order"></div>
                   <div class="u-pt-600 u-d-flex">
                     <div class=
@@ -153,7 +155,7 @@
                           rel="nofollow" data-method="post" href=
                           "https://booth.pm/items/1212644/wish_list">
                           <div class=
-                          "border-2 border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
+                          "border border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
                             <div class=
                             "typography-14 preserve-half-leading wishlists_count">
                               147
@@ -168,14 +170,13 @@
                           data-method="delete" href=
                           "https://booth.pm/items/1212644/wish_list">
                           <div class=
-                          "border-2 border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
+                          "border border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
                             <div class=
                             "typography-14 preserve-half-leading wishlists_count">
                               147
                             </div>
                           </div></a>
                         </div>
-                        <div class="empty:hidden my-16"></div>
                         <div>
                           <ul class=
                           "variations u-mt-300 u-border-b" id=
