--- a/VRChat/34/1210634.html
+++ b/VRChat/34/1210634.html
@@ -75,9 +75,9 @@
     "viewport">
     <meta name="csrf-param" content="authenticity_token">
     <script src=
-    "https://asset.booth.pm/assets/fb659a8225f82fcde9b8.js" defer=
+    "https://asset.booth.pm/assets/39c7779328e45f19f660.js" defer=
     "defer" nonce=
-    "hGGzPZJsKeLq+EeSbNCH5QVCsr6wxklLtRoPYiFB9cI="></script>
+    "G8Rv4+PHx8V+/NNx6wMbX1T/t+q0mlSzCPYOquuGuq0="></script>
     <script type="application/ld+json">
     {"@context":"https://schema.org","@type":"Product","name":"オリジナル3D打刀モデル「AstrasMK0」","description":"オリジナル3D打刀モデル「AstrasMK0」\n製作者: Kris（＠dogboyKris）\n\n本モデルはエミッションとノーマルマップ入り\nUnity Packageにマテリアル、クロスコンポーネントとトレールレンダーラーの設定入り。\n\n内容物：\n- AstrasMK0.fbx\n    △ 3023 ポリゴン\n- AstrasMK0Tex.psd\n    改変用テクスチャーファイル\n- AstrasMK0.unitypackage\n    簡単にセットアップ用のPrefabとコンポーネント入りUnity Package\n\n利用可能なこと \n- VRChatやその他ソフトウェアの個人利用 \n- 商用利用 \n- モデルの改変 \n\t\n禁止なこと \n- 再配布 \n- 本モデルや改変、モデルの一部利用を含んだアバターの自作発言 \n- その他当モデルを利用した公序良俗に反する行為や迷惑行為\n\n\n\t\n翻訳：SFTengu(@sinful_tengu)\n-------------\n-------------\nOriginal 3D Model - Katana 'AstrasMK0'\nAuthor: kris (@dogboyKris)\n\nThis model includes Emission and NormalMap\nUnity package includes material setup, cloth physics on the cloth part and a trail effect for the blade.\n\n\nFile Contents \n\n- AstrasMK0.fbx\n\t△ 3023 tris\n- AstrasMK0Tex.psd\n\ttexture file for easy editing purposes\n- AstrasMK0.unitypackage\n\tprefab and components\n\n\nAllowed uses \n\n- Use in VRChat and other software \n- Commercial use\n- Modification of the model \n\nProhibited uses \n\n- Redistributing the files \n- Claiming as your own creation (including modified versions)","url":"https://booth.pm/ja/items/1210634","offers":{"priceCurrency":"JPY","@type":"Offer","price":"400"},"image":"https://booth.pximg.net/c/620x620/d791416b-4ac5-4090-af79-25feb80d3fc1/i/1210634/73636fa1-1936-40f7-8b98-98f22f09a7fc_base_resized.jpg"}
     </script>
@@ -91,7 +91,7 @@
     "//www.googletagmanager.com/ns.html?id=GTM-WLLNDM" style=
     "display:none;visibility:hidden" width="0"></iframe></noscript>
     <script src="https://asset.booth.pm/google_tag_manager_ad.js"
-    nonce="hGGzPZJsKeLq+EeSbNCH5QVCsr6wxklLtRoPYiFB9cI="></script>
+    nonce="G8Rv4+PHx8V+/NNx6wMbX1T/t+q0mlSzCPYOquuGuq0="></script>
     <div class="service-informations">
       <div class="promotion-banner"></div>
     </div>
@@ -115,6 +115,8 @@
               <div class=
               "market-item-detail-article u-d-flex u-flex-column u-pb-400 u-align-items-center">
                 <div class="container">
+                  <div class=
+                  "market-item-detail__exhibition-banner"></div>
                   <div id="js-item-order"></div>
                   <div class="u-pt-600 u-d-flex">
                     <div class=
@@ -158,7 +160,7 @@
                           rel="nofollow" data-method="post" href=
                           "https://booth.pm/items/1210634/wish_list">
                           <div class=
-                          "border-2 border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
+                          "border border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
                             <div class=
                             "typography-14 preserve-half-leading wishlists_count">
                               386
@@ -173,14 +175,13 @@
                           data-method="delete" href=
                           "https://booth.pm/items/1210634/wish_list">
                           <div class=
-                          "border-2 border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
+                          "border border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
                             <div class=
                             "typography-14 preserve-half-leading wishlists_count">
                               386
                             </div>
                           </div></a>
                         </div>
-                        <div class="empty:hidden my-16"></div>
                         <div>
                           <ul class=
                           "variations u-mt-300 u-border-b" id=
