--- a/VRChat/56/1211956.html
+++ b/VRChat/56/1211956.html
@@ -98,9 +98,9 @@
     "viewport">
     <meta name="csrf-param" content="authenticity_token">
     <script src=
-    "https://asset.booth.pm/assets/fb659a8225f82fcde9b8.js" defer=
+    "https://asset.booth.pm/assets/39c7779328e45f19f660.js" defer=
     "defer" nonce=
-    "cHRLoPN7045W0uwZd6DKoOhXZoEk6enQ0/Qa5ThC+80="></script>
+    "ef0S6IJeoSeLlS43ppXt6VsS144Bft296LhjhxLtpsE="></script>
     <script type="application/ld+json">
     {"@context":"https://schema.org","@type":"Product","name":"鬼面","description":"主にVRchatでの利用を想定した\n鬼面4色の3Dモデルとなります。\n\n【ポリゴン数】\n･1002\n\n【使用Shader】\nユニティちゃんトゥーンシェーダー Ver.2.0.7\nhttps://unity-chan.com/download/releaseNote.php?id=UTS2_0\n\n【ファイル内容】\n･unitypackage\n･改変用psdファイル\n\n\n※同梱モデルにはUnlit/TextureのShaderを使用しています。\nCubedParadoxs/Flat Lit Toonを利用される場合は\nCubeds-Unity-Shadersを導入して選択してください。\n\n【Cubeds-Unity-Shadersの導入方法】\nhttp://vrchatjp.playing.wiki/d/Cubeds-Unity-Shaders\n\n【利用にあたって】\n〇VRchatへのアップロード\n〇アバターペデスタルへの利用\n〇モデルを改変しての利用\n〇商用利用(データそのものを販売しない場合のみ)\n〇動画制作での使用\n\n×購入者以外の方がデータを取得出来る状態での利用\n×同梱されているデータそのものの販売\n×再配布(改変の有無問わず禁止)\n\n-更新履歴-\n2019.2/2 販売開始\n2020.2/10 ShaderをUTS2に変更\n-------------------------------------------------\n質問･不具合などあればご一報ください。\n【Twitter】https://twitter.com/Sdnsk","url":"https://booth.pm/ja/items/1211956","offers":{"priceCurrency":"JPY","@type":"Offer","price":"200"},"image":"https://booth.pximg.net/c/620x620/43027730-b2d6-42a7-99e8-a3d369411f2e/i/1211956/289591dd-7ce0-4ec0-b87f-e5ab35684e71_base_resized.jpg"}
     </script>
@@ -111,7 +111,7 @@
     src="//www.googletagmanager.com/ns.html?id=GTM-WLLNDM" style=
     "display:none;visibility:hidden" width="0"></iframe></noscript>
     <script src="https://asset.booth.pm/google_tag_manager_ad.js"
-    nonce="cHRLoPN7045W0uwZd6DKoOhXZoEk6enQ0/Qa5ThC+80="></script>
+    nonce="ef0S6IJeoSeLlS43ppXt6VsS144Bft296LhjhxLtpsE="></script>
     <div class="service-informations">
       <div class="promotion-banner"></div>
     </div>
@@ -135,6 +135,8 @@
               <div class=
               "market-item-detail-article u-d-flex u-flex-column u-pb-400 u-align-items-center">
                 <div class="container">
+                  <div class=
+                  "market-item-detail__exhibition-banner"></div>
                   <div id="js-item-order"></div>
                   <div class="u-pt-600 u-d-flex">
                     <div class=
@@ -178,7 +180,7 @@
                           rel="nofollow" data-method="post" href=
                           "https://booth.pm/items/1211956/wish_list">
                           <div class=
-                          "border-2 border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
+                          "border border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
                             <div class=
                             "typography-14 preserve-half-leading wishlists_count">
                               44
@@ -193,14 +195,13 @@
                           data-method="delete" href=
                           "https://booth.pm/items/1211956/wish_list">
                           <div class=
-                          "border-2 border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
+                          "border border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
                             <div class=
                             "typography-14 preserve-half-leading wishlists_count">
                               44
                             </div>
                           </div></a>
                         </div>
-                        <div class="empty:hidden my-16"></div>
                         <div>
                           <ul class=
                           "variations u-mt-300 u-border-b" id=
