--- a/VRChat/58/1211658.html
+++ b/VRChat/58/1211658.html
@@ -99,9 +99,9 @@
     "viewport">
     <meta name="csrf-param" content="authenticity_token">
     <script src=
-    "https://asset.booth.pm/assets/fb659a8225f82fcde9b8.js" defer=
+    "https://asset.booth.pm/assets/39c7779328e45f19f660.js" defer=
     "defer" nonce=
-    "4jSceN+AhUZVHXC9WaIwZb8sTCtBah7kngEK6gH6h3g="></script>
+    "7T3DRb8pmS6qm8tB/1SKB7/4D6anlR0D6qP1tytCxZc="></script>
     <script type="application/ld+json">
     {"@context":"https://schema.org","@type":"Product","name":"みんちゃんソード","description":"みんちゃん初！モデリング！（から二回目）の作品です。\n悪過ぎない限り何してもいいです。\n２０１９ポリゴンです。\n\n\n※blender勉強中です。ファイルの保存方法、販売方法もわかりません。これからもどんどん勉強するので温かい目で見守ってください。\n\n\n","url":"https://booth.pm/ja/items/1211658","offers":{"priceCurrency":"JPY","@type":"Offer","price":"0"},"image":"https://booth.pximg.net/c/620x620/90142dc5-94e2-429c-a719-4db89af8e2cc/i/1211658/d76de584-ba7e-40ff-96a0-ea14cb62c705_base_resized.jpg"}
     </script>
@@ -112,7 +112,7 @@
     src="//www.googletagmanager.com/ns.html?id=GTM-WLLNDM" style=
     "display:none;visibility:hidden" width="0"></iframe></noscript>
     <script src="https://asset.booth.pm/google_tag_manager_ad.js"
-    nonce="4jSceN+AhUZVHXC9WaIwZb8sTCtBah7kngEK6gH6h3g="></script>
+    nonce="7T3DRb8pmS6qm8tB/1SKB7/4D6anlR0D6qP1tytCxZc="></script>
     <div class="service-informations">
       <div class="promotion-banner"></div>
     </div>
@@ -136,6 +136,8 @@
               <div class=
               "market-item-detail-article u-d-flex u-flex-column u-pb-400 u-align-items-center">
                 <div class="container">
+                  <div class=
+                  "market-item-detail__exhibition-banner"></div>
                   <div id="js-item-order"></div>
                   <div class="u-pt-600 u-d-flex">
                     <div class=
@@ -179,7 +181,7 @@
                           rel="nofollow" data-method="post" href=
                           "https://booth.pm/items/1211658/wish_list">
                           <div class=
-                          "border-2 border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
+                          "border border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
                             <div class=
                             "typography-14 preserve-half-leading wishlists_count">
                               12
@@ -194,14 +196,13 @@
                           data-method="delete" href=
                           "https://booth.pm/items/1211658/wish_list">
                           <div class=
-                          "border-2 border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
+                          "border border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
                             <div class=
                             "typography-14 preserve-half-leading wishlists_count">
                               12
                             </div>
                           </div></a>
                         </div>
-                        <div class="empty:hidden my-16"></div>
                         <div>
                           <ul class=
                           "variations u-mt-300 u-border-b" id=
