updated at: 2023-04-25 16:54, 撲殺ソード - みんちゃん屋台 - BOOTH

--- a/VRChat/58/1210058.html
+++ b/VRChat/58/1210058.html
@@ -98,9 +98,9 @@
     "viewport">
     <meta name="csrf-param" content="authenticity_token">
     <script src=
-    "https://asset.booth.pm/assets/fb659a8225f82fcde9b8.js" defer=
+    "https://asset.booth.pm/assets/39c7779328e45f19f660.js" defer=
     "defer" nonce=
-    "/S3C69oAtfSDy/mGElyaT/w65K6FUtOBFGPN/Y+yLAU="></script>
+    "BMBSGPUvhehmknPEd6X7h4gPEq5llReEV1YqT4I9dLE="></script>
     <script type="application/ld+json">
     {"@context":"https://schema.org","@type":"Product","name":"撲殺ソード","description":"はじめてのモデリングです。刃の向きがおかしく、斬りつけるというよりは面で撲殺するという感じなのでこの名前にしました。\n本当にクオリティが低いので期待はしないでください。\nzipにblenderファイル、fbxファイルが入っています。","url":"https://booth.pm/ja/items/1210058","offers":{"priceCurrency":"JPY","@type":"Offer","price":"0"},"image":"https://booth.pximg.net/c/620x620/90142dc5-94e2-429c-a719-4db89af8e2cc/i/1210058/3dfb63b9-84c2-4ebd-bfa1-91d573735d0b_base_resized.jpg"}
     </script>
@@ -111,7 +111,7 @@
     src="//www.googletagmanager.com/ns.html?id=GTM-WLLNDM" style=
     "display:none;visibility:hidden" width="0"></iframe></noscript>
     <script src="https://asset.booth.pm/google_tag_manager_ad.js"
-    nonce="/S3C69oAtfSDy/mGElyaT/w65K6FUtOBFGPN/Y+yLAU="></script>
+    nonce="BMBSGPUvhehmknPEd6X7h4gPEq5llReEV1YqT4I9dLE="></script>
     <div class="service-informations">
       <div class="promotion-banner"></div>
     </div>
@@ -135,6 +135,8 @@
               <div class=
               "market-item-detail-article u-d-flex u-flex-column u-pb-400 u-align-items-center">
                 <div class="container">
+                  <div class=
+                  "market-item-detail__exhibition-banner"></div>
                   <div id="js-item-order"></div>
                   <div class="u-pt-600 u-d-flex">
                     <div class=
@@ -178,7 +180,7 @@
                           rel="nofollow" data-method="post" href=
                           "https://booth.pm/items/1210058/wish_list">
                           <div class=
-                          "border-2 border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
+                          "border border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
                             <div class=
                             "typography-14 preserve-half-leading wishlists_count">
                               9
@@ -193,14 +195,13 @@
                           data-method="delete" href=
                           "https://booth.pm/items/1210058/wish_list">
                           <div class=
-                          "border-2 border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
+                          "border border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
                             <div class=
                             "typography-14 preserve-half-leading wishlists_count">
                               9
                             </div>
                           </div></a>
                         </div>
-                        <div class="empty:hidden my-16"></div>
                         <div>
                           <ul class=
                           "variations u-mt-300 u-border-b" id=
