--- a/VRChat/50/1084750.html
+++ b/VRChat/50/1084750.html
@@ -75,9 +75,9 @@
     "viewport">
     <meta name="csrf-param" content="authenticity_token">
     <script src=
-    "https://asset.booth.pm/assets/fb659a8225f82fcde9b8.js" defer=
+    "https://asset.booth.pm/assets/39c7779328e45f19f660.js" defer=
     "defer" nonce=
-    "49IeAZtrQJRdvPZv4E2wgaFr6GeAMsTgyxZv+gRUM2Q="></script>
+    "UvQaRprTn1Y5glvriuh33Wi3+yig4pO3iq9xoB4iIw4="></script>
     <script type="application/ld+json">
     {"@context":"https://schema.org","@type":"Product","name":"オリジナル３Dモデル　「ラナ - Classic-」","description":"オリジナル３Dモデル　RANA - ラナ -Classic- v1.2\n\n*このモデルはアップデートによるサポートはございません。\n*This model is not supported by updates.\n-2500円-\u003e1000円\n\n*ダイナミックボーンがインポートされてない場合、prefabのアップロードができない現象があります。\nダイナミックボーンをお持ちしていない方は「Amature\\hips\\spine\\chest\\neck」の「Head,Aho_Bone_1,Hair_Front,Hair_Side,Ponytail_1」のTransform以外のComponentを消してください。\n\n* If dynamic bone is not imported, prefab may not be uploaded.\nIf you don't have dynamic bones, please delete Components other than Transform of \"Head, Aho_Bone_1, Hair_Front, Hair_Side, Ponytail_1\" of \"Amature \\ hips \\ spine \\ chest \\ neck\".","url":"https://booth.pm/ja/items/1084750","offers":{"priceCurrency":"JPY","@type":"Offer","price":"1000"},"image":"https://booth.pximg.net/c/620x620/bf4eda07-ab20-4fe6-888a-5fc4f823e298/i/1084750/f99346e2-8919-4259-9c96-26a9eb22a115_base_resized.jpg"}
     </script>
@@ -85,16 +85,13 @@
     "https://asset.booth.pm/favicon.ico">
     <link href="/static-images/pwa/icon_size_180.png" rel=
     "apple-touch-icon-precomposed">
-    <style type="text/css">
-    .eventname-flag--inner {   margin-right: 6px; }  .eventname-flag--inner.eventname-flag--exhibition-open {   margin-right: 0px; }
-    </style>
   </head>
   <body>
     <noscript><iframe height="0" src=
     "//www.googletagmanager.com/ns.html?id=GTM-WLLNDM" style=
     "display:none;visibility:hidden" width="0"></iframe></noscript>
     <script src="https://asset.booth.pm/google_tag_manager_ad.js"
-    nonce="49IeAZtrQJRdvPZv4E2wgaFr6GeAMsTgyxZv+gRUM2Q="></script>
+    nonce="UvQaRprTn1Y5glvriuh33Wi3+yig4pO3iq9xoB4iIw4="></script>
     <div class="service-informations">
       <div class="promotion-banner"></div>
     </div>
@@ -118,6 +115,8 @@
               <div class=
               "market-item-detail-article u-d-flex u-flex-column u-pb-400 u-align-items-center">
                 <div class="container">
+                  <div class=
+                  "market-item-detail__exhibition-banner"></div>
                   <div id="js-item-order"></div>
                   <div class="u-pt-600 u-d-flex">
                     <div class=
@@ -132,7 +131,8 @@
                             "empty:hidden flex gap-4 items-center">
                               <div class="flex min-w-0">
                                 <div class="eventname-flag">
-                                  <a class="eventname-flag--inner"
+                                  <a class=
+                                  "eventname-flag--inner mr-[6px]"
                                   data-tracking="click"
                                   data-product-list=
                                   "from market_show via eventname_flag to event_index"
@@ -173,7 +173,7 @@
                           rel="nofollow" data-method="post" href=
                           "https://booth.pm/items/1084750/wish_list">
                           <div class=
-                          "border-2 border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
+                          "border border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
                             <div class=
                             "typography-14 preserve-half-leading wishlists_count">
                               621
@@ -188,14 +188,13 @@
                           data-method="delete" href=
                           "https://booth.pm/items/1084750/wish_list">
                           <div class=
-                          "border-2 border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
+                          "border border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
                             <div class=
                             "typography-14 preserve-half-leading wishlists_count">
                               621
                             </div>
                           </div></a>
                         </div>
-                        <div class="empty:hidden my-16"></div>
                         <div>
                           <ul class=
                           "variations u-mt-300 u-border-b" id=
