updated at: 2023-04-25 16:54, 悪役結社ヴァリアール缶バッジ - えいてる屋 - BOOTH

--- a/VRChat/71/1209671.html
+++ b/VRChat/71/1209671.html
@@ -100,9 +100,9 @@
     "viewport">
     <meta name="csrf-param" content="authenticity_token">
     <script src=
-    "https://asset.booth.pm/assets/fb659a8225f82fcde9b8.js" defer=
+    "https://asset.booth.pm/assets/39c7779328e45f19f660.js" defer=
     "defer" nonce=
-    "meCIX7XbE3iXRgEewv12AOIcq+mQdONkZWGZZzfauTc="></script>
+    "GT75pSmYllovVFs7VMJVfurxNzfNPoUj/Y6U4mOivlE="></script>
     <script type="application/ld+json">
     {"@context":"https://schema.org","@type":"Product","name":"悪役結社ヴァリアール缶バッジ","description":"【この商品はpixivFACTORYで作られた商品です。サンプル画像は完成イメージのため、実物と異なる場合があります。】\n\nVRChat世界に潜む恐るべき悪の組織、『悪役結社ヴァリアール』の物理缶バッジが登場！\n\n\n\n\n◆VAREAL　LICENSED◆ \n本商品は『ヴァリアールライセンス』認可商品である。\n『ヴァリアールライセンス』とは、バーチャル世界の悪の組織、『悪役結社ヴァリアール』が公式に関連商品と認めたもののみに発行されるロゴマーク及びタグである。 『ヴァリアールライセンス』の詳細は下記URLを参照とする。\nhttps://vrheel.com/license/\n◆VAREAL　LICENSED◆\t","url":"https://booth.pm/ja/items/1209671","offers":{"priceCurrency":"JPY","@type":"Offer","price":"510"},"image":"https://booth.pximg.net/c/620x620/75409dcf-e181-4290-a053-65156c11a7c3/i/1209671/444dec95-1fd5-4190-a35e-463d2dadbec6_base_resized.jpg"}
     </script>
@@ -113,7 +113,7 @@
     src="//www.googletagmanager.com/ns.html?id=GTM-WLLNDM" style=
     "display:none;visibility:hidden" width="0"></iframe></noscript>
     <script src="https://asset.booth.pm/google_tag_manager_ad.js"
-    nonce="meCIX7XbE3iXRgEewv12AOIcq+mQdONkZWGZZzfauTc="></script>
+    nonce="GT75pSmYllovVFs7VMJVfurxNzfNPoUj/Y6U4mOivlE="></script>
     <div class="service-informations">
       <div class="promotion-banner"></div>
     </div>
@@ -137,6 +137,8 @@
               <div class=
               "market-item-detail-article u-d-flex u-flex-column u-pb-400 u-align-items-center">
                 <div class="container">
+                  <div class=
+                  "market-item-detail__exhibition-banner"></div>
                   <div id="js-item-order"></div>
                   <div class="u-pt-600 u-d-flex">
                     <div class=
@@ -180,7 +182,7 @@
                           rel="nofollow" data-method="post" href=
                           "https://booth.pm/items/1209671/wish_list">
                           <div class=
-                          "border-2 border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
+                          "border border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
                             <div class=
                             "typography-14 preserve-half-leading wishlists_count">
                               19
@@ -195,14 +197,13 @@
                           data-method="delete" href=
                           "https://booth.pm/items/1209671/wish_list">
                           <div class=
-                          "border-2 border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
+                          "border border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
                             <div class=
                             "typography-14 preserve-half-leading wishlists_count">
                               19
                             </div>
                           </div></a>
                         </div>
-                        <div class="empty:hidden my-16"></div>
                         <div>
                           <ul class=
                           "variations u-mt-300 u-border-b" id=
@@ -352,7 +353,7 @@
                                     "legacy-list-item__content">
                                       <div class="u-d-sp-block">
                                         <span class=
-                                        "autolink u-text-wrap">2023/04/27</span>
+                                        "autolink u-text-wrap">2023/04/28</span>
                                       </div>
                                     </div>
                                   </div>
