updated at: 2023-04-25 16:55, 【VRChatアバター向けオリジナル3Dモデル】EAF-05 アラストール - だんけわーくす - BOOTH

--- a/VRChat/19/1207119.html
+++ b/VRChat/19/1207119.html
@@ -75,9 +75,9 @@
     "viewport">
     <meta name="csrf-param" content="authenticity_token">
     <script src=
-    "https://asset.booth.pm/assets/fb659a8225f82fcde9b8.js" defer=
+    "https://asset.booth.pm/assets/39c7779328e45f19f660.js" defer=
     "defer" nonce=
-    "B4U12OtiGJIWA9cnr/ooNug3D4t1i35o6U4kk344ilc="></script>
+    "fjG+WFcLyr0TLkFagQ4KTrUYdv9Ek5nNn2Mx0/FESJA="></script>
     <script type="application/ld+json">
     {"@context":"https://schema.org","@type":"Product","name":"【VRChatアバター向けオリジナル3Dモデル】EAF-05 アラストール","description":"■EAF-05C1/C2 アラストール\nVRChatでの利用を想定したメカモデルです\n\n初期状態はC2型(増加装甲バージョン)となっており、追加装甲メッシュをOFFにしC1型用頭部をアクティブにすることで軽装甲バージョンのC1型にすることが可能です\n\n■付属品\n・大型シールド(+追加装甲)\n・203mmスナイパー・キャノン\n・120mmEGライフル\n・VLMS(垂直発射ミサイル・システム)\n・ナイフ(連装ラック)\n・サブアームユニット\n\n■テクスチャ改変用のpsdファイル同梱\n\n■Reflex Shader 2.0.1（https://booth.pm/ja/items/1088971）対応\n\n■更新\n2/2：Humanoidボーン設定が正しく機能していなかったためモデルを差し替えました\n\n■フルボディトラッキングについて\n・手足の比率が人間と乖離しているため、フルトラッキング時はアバター読み込み後のキャリブレーション時、VRChatの身長設定を調整する必要があります。\n\n\n■禁止事項\n・本データの再配布は禁止です。\n・自作発言はおやめください。\n\n■許可事項\n・データの改変(パーツ取り含む)\n・営利利用\n・映像制作\n・動画配信\n\n■その他\n・アバターペデスタルへの利用は禁止します。","url":"https://booth.pm/ja/items/1207119","offers":{"priceCurrency":"JPY","@type":"Offer","price":"3000"},"image":"https://booth.pximg.net/c/620x620/4c0b8e4e-23ce-4b6b-91ae-c803cad67328/i/1207119/83509ad3-9971-4aac-b060-cce82f073c94_base_resized.jpg"}
     </script>
@@ -85,16 +85,13 @@
     "https://asset.booth.pm/favicon.ico">
     <link href="/static-images/pwa/icon_size_180.png" rel=
     "apple-touch-icon-precomposed">
-    <style type="text/css">
-    .eventname-flag--inner {   margin-right: 6px; }  .eventname-flag--inner.eventname-flag--exhibition-open {   margin-right: 0px; }
-    </style>
   </head>
   <body>
     <noscript><iframe height="0" src=
     "//www.googletagmanager.com/ns.html?id=GTM-WLLNDM" style=
     "display:none;visibility:hidden" width="0"></iframe></noscript>
     <script src="https://asset.booth.pm/google_tag_manager_ad.js"
-    nonce="B4U12OtiGJIWA9cnr/ooNug3D4t1i35o6U4kk344ilc="></script>
+    nonce="fjG+WFcLyr0TLkFagQ4KTrUYdv9Ek5nNn2Mx0/FESJA="></script>
     <div class="service-informations">
       <div class="promotion-banner"></div>
     </div>
@@ -118,6 +115,8 @@
               <div class=
               "market-item-detail-article u-d-flex u-flex-column u-pb-400 u-align-items-center">
                 <div class="container">
+                  <div class=
+                  "market-item-detail__exhibition-banner"></div>
                   <div id="js-item-order"></div>
                   <div class="u-pt-600 u-d-flex">
                     <div class=
@@ -132,7 +131,8 @@
                             "empty:hidden flex gap-4 items-center">
                               <div class="flex min-w-0">
                                 <div class="eventname-flag">
-                                  <a class="eventname-flag--inner"
+                                  <a class=
+                                  "eventname-flag--inner mr-[6px]"
                                   data-tracking="click"
                                   data-product-list=
                                   "from market_show via eventname_flag to event_index"
@@ -173,7 +173,7 @@
                           rel="nofollow" data-method="post" href=
                           "https://booth.pm/items/1207119/wish_list">
                           <div class=
-                          "border-2 border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
+                          "border border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
                             <div class=
                             "typography-14 preserve-half-leading wishlists_count">
                               822
@@ -188,14 +188,13 @@
                           data-method="delete" href=
                           "https://booth.pm/items/1207119/wish_list">
                           <div class=
-                          "border-2 border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
+                          "border border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
                             <div class=
                             "typography-14 preserve-half-leading wishlists_count">
                               822
                             </div>
                           </div></a>
                         </div>
-                        <div class="empty:hidden my-16"></div>
                         <div>
                           <ul class=
                           "variations u-mt-300 u-border-b" id=
