updated at: 2023-04-25 16:55, 魔人の大剣(VRChat想定オリジナル武器モデル) - 大黒屋O-To-san - BOOTH

--- a/VRChat/15/1208315.html
+++ b/VRChat/15/1208315.html
@@ -75,9 +75,9 @@
     "viewport">
     <meta name="csrf-param" content="authenticity_token">
     <script src=
-    "https://asset.booth.pm/assets/fb659a8225f82fcde9b8.js" defer=
+    "https://asset.booth.pm/assets/39c7779328e45f19f660.js" defer=
     "defer" nonce=
-    "+AJtj4EiFyvfu4gUGV5U26aRaqa3otmz9Rszz5auH2w="></script>
+    "o2TFEMdO3ssQaW1MZl0XPIGCpZN8kO7w6Y7w4ZmDf7s="></script>
     <script type="application/ld+json">
     {"@context":"https://schema.org","@type":"Product","name":"魔人の大剣(VRChat想定オリジナル武器モデル)","description":"魔人の大剣(VRChat使用推奨モデル)\n\nVRChatで使用することを想定した、△7318ポリゴンの武器モデルです。\nサイズが大きいので、適切なサイズに合わせてご利用ください。\n\n内容物\n・fbxファイル\n・テクスチャ（PNG）\n・ノーマルマップ\n・Unitypackage（Unityにて開きます。サンプルのマテリアルが設定されています。）\n\n一応グロテスクな形をしていますので、周囲への配慮をお願いします\n\n※2019/03/14更新　\n Unitypackage追加\n 意味をなしていなかったUnityファイルの削除\n","url":"https://booth.pm/ja/items/1208315","offers":{"priceCurrency":"JPY","@type":"Offer","price":"500"},"image":"https://booth.pximg.net/c/620x620/ba7f3e00-a1bf-46d0-96b2-b333ec40ae45/i/1208315/16cf48eb-e566-4014-bdd2-9ead108bb299_base_resized.jpg"}
     </script>
@@ -91,7 +91,7 @@
     "//www.googletagmanager.com/ns.html?id=GTM-WLLNDM" style=
     "display:none;visibility:hidden" width="0"></iframe></noscript>
     <script src="https://asset.booth.pm/google_tag_manager_ad.js"
-    nonce="+AJtj4EiFyvfu4gUGV5U26aRaqa3otmz9Rszz5auH2w="></script>
+    nonce="o2TFEMdO3ssQaW1MZl0XPIGCpZN8kO7w6Y7w4ZmDf7s="></script>
     <div class="service-informations">
       <div class="promotion-banner"></div>
     </div>
@@ -115,6 +115,8 @@
               <div class=
               "market-item-detail-article u-d-flex u-flex-column u-pb-400 u-align-items-center">
                 <div class="container">
+                  <div class=
+                  "market-item-detail__exhibition-banner"></div>
                   <div id="js-item-order"></div>
                   <div class="u-pt-600 u-d-flex">
                     <div class=
@@ -158,7 +160,7 @@
                           rel="nofollow" data-method="post" href=
                           "https://booth.pm/items/1208315/wish_list">
                           <div class=
-                          "border-2 border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
+                          "border border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
                             <div class=
                             "typography-14 preserve-half-leading wishlists_count">
                               33
@@ -173,14 +175,13 @@
                           data-method="delete" href=
                           "https://booth.pm/items/1208315/wish_list">
                           <div class=
-                          "border-2 border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
+                          "border border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
                             <div class=
                             "typography-14 preserve-half-leading wishlists_count">
                               33
                             </div>
                           </div></a>
                         </div>
-                        <div class="empty:hidden my-16"></div>
                         <div>
                           <ul class=
                           "variations u-mt-300 u-border-b" id=
