updated at: 2023-04-25 16:57, 【VRMのみ】NEKO FANTASY 白魔道士 - ちま屋 -Chimaya- - BOOTH

--- a/VRChat/99/1206299.html
+++ b/VRChat/99/1206299.html
@@ -75,9 +75,9 @@
     "viewport">
     <meta name="csrf-param" content="authenticity_token">
     <script src=
-    "https://asset.booth.pm/assets/fb659a8225f82fcde9b8.js" defer=
+    "https://asset.booth.pm/assets/39c7779328e45f19f660.js" defer=
     "defer" nonce=
-    "jlxtYA5q4T6+fIv7klb+lsAhc/NKy17/Tl437bCPqf8="></script>
+    "XO4Qjmqo9i0Yjr0d2aXOiYlOpuup/3LJpYC8mU9yM6M="></script>
     <script type="application/ld+json">
     {"@context":"https://schema.org","@type":"Product","name":"【VRMのみ】NEKO FANTASY 白魔道士","description":"VRMアバター　「NEKO FANTASY 白魔道士」\n\n\nポリゴン数：7502\n\n6種類のねこちゃんから好きな子を選べます。\n\nリップシンク対応\n感情表現はありませんが「equip」で杖を持ちます。\n\n「all in one package 全部パック」は６種類すべてのVRMファイルと、VRMのカスタマイズができるunitypackageあり。\n\n＜アップデート＞\n2022.02.06　VRM版のみ再販。テクスチャの変更、杖を持つシェイプキー追加。その他細かな部分を調整しました。","url":"https://booth.pm/ja/items/1206299","offers":{"priceCurrency":"JPY","@type":"AggregateOffer","lowPrice":"600","highPrice":"2000"},"image":"https://booth.pximg.net/c/620x620/1f163e5b-a0e4-46e7-be27-4850d72c7bc9/i/1206299/64a1ffc0-3f22-49cb-ab55-02177aab3799_base_resized.jpg"}
     </script>
@@ -91,7 +91,7 @@
     "//www.googletagmanager.com/ns.html?id=GTM-WLLNDM" style=
     "display:none;visibility:hidden" width="0"></iframe></noscript>
     <script src="https://asset.booth.pm/google_tag_manager_ad.js"
-    nonce="jlxtYA5q4T6+fIv7klb+lsAhc/NKy17/Tl437bCPqf8="></script>
+    nonce="XO4Qjmqo9i0Yjr0d2aXOiYlOpuup/3LJpYC8mU9yM6M="></script>
     <div class="service-informations">
       <div class="promotion-banner"></div>
     </div>
@@ -119,6 +119,8 @@
               <div class=
               "market-item-detail-article u-d-flex u-flex-column u-pb-400 u-align-items-center">
                 <div class="container">
+                  <div class=
+                  "market-item-detail__exhibition-banner"></div>
                   <div id="js-item-order"></div>
                   <div class="u-pt-600 u-d-flex">
                     <div class=
@@ -158,7 +160,7 @@
                           rel="nofollow" data-method="post" href=
                           "https://booth.pm/items/1206299/wish_list">
                           <div class=
-                          "border-2 border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
+                          "border border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
                             <div class=
                             "typography-14 preserve-half-leading wishlists_count">
                               165
@@ -173,14 +175,13 @@
                           data-method="delete" href=
                           "https://booth.pm/items/1206299/wish_list">
                           <div class=
-                          "border-2 border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
+                          "border border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
                             <div class=
                             "typography-14 preserve-half-leading wishlists_count">
                               165
                             </div>
                           </div></a>
                         </div>
-                        <div class="empty:hidden my-16"></div>
                         <div>
                           <ul class=
                           "variations u-mt-300 u-border-b" id=
